# Projects

./: README.md
CD_Battery_Optimisation/backend/: Dockerfile  README.md  pyproject.toml
CD_Battery_Optimisation/backend/gb_battery/: __init__.py  cli.py  settlement.py
CD_Battery_Optimisation/backend/gb_battery.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
CD_Battery_Optimisation/backend/gb_battery/api/: main.py  schemas.py  services.py
CD_Battery_Optimisation/backend/gb_battery/backtest/: __init__.py  engine.py  leakage.py  metrics.py  runner.py  strategies.py
CD_Battery_Optimisation/backend/gb_battery/battery/: __init__.py  config.py
CD_Battery_Optimisation/backend/gb_battery/bm/: __init__.py  acceptance.py
CD_Battery_Optimisation/backend/gb_battery/data/: __init__.py  cache.py  elexon.py  http.py  market_snapshot.py  neso.py  providers.py  schemas.py  settings.py
CD_Battery_Optimisation/backend/gb_battery/data_samples/: synthetic_history.parquet
CD_Battery_Optimisation/backend/gb_battery/demo/: __init__.py  sample_data.py  scenarios.py
CD_Battery_Optimisation/backend/gb_battery/forecast/: __init__.py  features.py  metrics.py  models.py  validation.py
CD_Battery_Optimisation/backend/gb_battery/lineage/: __init__.py  models.py
CD_Battery_Optimisation/backend/gb_battery/optimiser/: __init__.py  deterministic.py  explain.py  inputs.py  model.py  results.py  service.py  solver.py
CD_Battery_Optimisation/backend/gb_battery/replay/: __init__.py  benchmarks.py  engine.py  forecaster.py  (+3 more)
CD_Battery_Optimisation/backend/tests/: conftest.py  test_api.py  test_backtest.py  test_battery_config.py  test_constraints.py  test_data.py  test_deterministic_cases.py  test_economics.py  test_forecast.py  test_replay_api.py  test_replay_engine.py  test_replay_pit.py  test_scenario.py  test_service_value.py  test_settlement.py
(+258 files in other folders)
