[project]
name = "gb-battery"
version = "0.1.0"
description = "GB Battery Co-Optimisation Terminal — research & decision-support engine for GB battery trading."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Andrea Tarditi" }]

dependencies = [
    # Web / API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    # Data access
    "httpx>=0.27",
    "tenacity>=8.4",
    # Data transformation / storage
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "duckdb>=1.0",
    "pytz>=2024.1",
    "pandera>=0.19",
    # Optimisation
    "pyomo>=6.7",
    "highspy>=1.7",
    # Forecasting
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
db = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-python-dateutil",
    "respx>=0.21",
]

[project.scripts]
gb-battery = "gb_battery.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gb_battery*"]

[tool.setuptools.package-data]
gb_battery = ["data_samples/*.parquet", "data_samples/*.csv"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["gb_battery", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PD"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
files = ["gb_battery"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
